--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dari apy</title>
+    <title>buat zalpaaaa</title>
     <link rel="stylesheet" href="style ucapan.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <audio src="https://feeldreams.github.io/djikhlas.mp3"></audio>
